--- a/FrontEndtesting/style.css
+++ b/FrontEndtesting/style.css
@@ -50,7 +50,7 @@ button{
     border-radius: 50px;
     padding: 10px 18px 10px 18px;
     transition-duration: 0.3s;
-    font-size: 1vw;
+    font-size: 13px;
 }
 button:hover{
     cursor: pointer;
@@ -92,4 +92,88 @@ button:hover{
 .search:focus{
     outline: none;
 }
+.filter_container{
+    min-height: 20px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+.filter_container button{
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.connector_selector_container{
+    display: block;
+}
+.segment_connectors_container h1{
+    display: block;
+}
+.segment_connectors_container{
+    display: flex;
+}
+.segment_connectors_container:hover{
+    background-color: red;
+}
+
+
+
+.connetor_results_container{
+    width: 100%;
+    flex-grow: 1;
+    background-color: rgb(151, 166, 251);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.connector_cell_container{
+    background-color: white;
+    border-radius: 20px;
+    border: 2px solid blue;
+}
+.connector_cell_type_1{
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
+    min-height: 150px;
+}
+.connector_cell_type_1 img{
+    width: 55%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+}
+.cell_text_type_1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 10px;
+}
+.cell_text_type_1 p{
+    margin: 0px;
+}
+.connector_cell_more_options{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 5px;
+    gap: 5px;
+}
+.connector_cell_more_options button{
+    background-color: rgb(247, 247, 247);
+    border: 2px solid blue;
+    padding: 5px 7px 5px 7px;
+    margin-top: 5px;
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
 
