--- a/FrontEndtesting/style.css
+++ b/FrontEndtesting/style.css
@@ -36,12 +36,18 @@ body{
     padding: 0.5%;
 
 }
+
+.header_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 .title{
-    font-size: 3vw;
-    margin-bottom: 10px;
+    font-size: 3rem;
 }
 .side_title{
-    font-size: 3.1vw;
+    font-size: 3rem;
 }
 .pre-config_header{
     font-size: 1vw;
@@ -83,7 +89,7 @@ button:hover{
     border: none;
     border-radius: 50px;
     width: 100%;
-    margin-top: 10px;
+    margin-left: 10px;
 }
 .search:active{
     border: none;
@@ -99,6 +105,7 @@ button:hover{
     align-items: center;
     justify-content: space-around;
     margin-top: 10px;
+    gap: 10px;
 }
 .filter_container button{
     flex-grow: 1;
@@ -106,16 +113,44 @@ button:hover{
 }
 
 .connector_selector_container{
-    display: block;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-.segment_connectors_container h1{
+.connector_selector_container h1{
     display: block;
+    margin: 0;
 }
 .segment_connectors_container{
     display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
 }
+
 .segment_connectors_container:hover{
-    background-color: red;
+    /* background-color: red; */
+}
+
+.connector_selector_radio_container:hover input ~ .connector_selector_radio{
+    background-color: aqua;
+}
+
+.connector_selector_radio_container{
+    cursor: pointer;
+}
+
+.connector_selector_radio_container input{
+    display: none;
+}
+.connector_selector_radio_container input:checked ~ .connector_selector_radio{
+    background-color: green;
+}
+
+.connector_selector_radio_container span{
+    border: 1px solid green;
 }
 
 
