--- a/FrontEndtesting/style.css
+++ b/FrontEndtesting/style.css
@@ -6,6 +6,9 @@ body{
     width: 100%;
     height: 100%;
 }
+.hidden{
+    display: none;
+}
 .connetor_container{
     height: auto;
     width: 25%;
@@ -99,7 +102,6 @@ button:hover{
     outline: none;
 }
 .filter_container{
-    min-height: 20px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -118,10 +120,15 @@ button:hover{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 5px;
 }
 .connector_selector_container h1{
     display: block;
     margin: 0;
+    font-weight: normal;
+    font-size: 1.6rem;
+    margin-top: 2px;
+    margin-bottom: 10px;
 }
 .segment_connectors_container{
     display: flex;
@@ -135,23 +142,31 @@ button:hover{
 }
 
 .connector_selector_radio_container:hover input ~ .connector_selector_radio{
-    background-color: aqua;
+    background-color: rgb(151, 166, 251);
 }
 
 .connector_selector_radio_container{
     cursor: pointer;
+    display: flex;
+    flex-grow: 1;
 }
 
 .connector_selector_radio_container input{
     display: none;
 }
 .connector_selector_radio_container input:checked ~ .connector_selector_radio{
-    background-color: green;
+    background-color: rgb(90, 90, 255);
+    color: white;
 }
 
-.connector_selector_radio_container span{
-    border: 1px solid green;
+.connector_selector_radio{
+    border: 2px solid blue;
+    padding: 5px 7px 5px 7px;
+    border-radius: 50px;
+    flex-grow: 1;
+    text-align: center;
 }
+
 
 
 
@@ -211,4 +226,35 @@ button:hover{
     flex-basis: 0;
 }
 
+.connector_cell_more_options button:hover{
+    background-color: rgb(90, 90, 255);
+    color: white;
+}
+
+.input_output{
+    display: flex;
+}
+
+.center{
+
+}
+
+.connector_bubble{
+    background-color: gray;
+    border: 4px solid black;
+    border-radius: 30%;
+    height: 100px;
+    width: 100px;
+    display: block;
+    margin: 2px;
+    cursor: pointer;
+}
+.connector_bubble_active{
+    border-color: blue;
+    box-shadow: 0px 0px 20px 0px blue;
+}
+
+.add_bubble{
+
+}
 
