--- a/FrontEndtesting/style.css
+++ b/FrontEndtesting/style.css
@@ -60,6 +60,7 @@ button{
     padding: 10px 18px 10px 18px;
     transition-duration: 0.3s;
     font-size: 13px;
+    user-select: none;
 }
 button:hover{
     cursor: pointer;
@@ -135,6 +136,7 @@ button:hover{
     width: 100%;
     align-items: center;
     justify-content: space-evenly;
+    gap: 5px;
 }
 
 .segment_connectors_container:hover{
@@ -165,6 +167,7 @@ button:hover{
     border-radius: 50px;
     flex-grow: 1;
     text-align: center;
+    user-select: none;
 }
 
 
@@ -243,11 +246,18 @@ button:hover{
 .input_output{
     display: flex;
     justify-content: center;
-}
-.io_double{
-    justify-content: space-between !important;
+    position: relative;
 }
 
+.right_io{
+    transform: translateX(63%);
+}
+.left_io{
+    transform: translateX(-63%);
+}
+.right_io_hidden{
+    z-index: 1;
+}
 .connectors_output_segment{
     grid-column-start: 3;
     grid-column-end: 4;
@@ -269,18 +279,53 @@ button:hover{
 }
 
 .connector_bubble{
-    background-color: lightgray;
+    background-color: white;
     border: 4px solid black;
-    border-radius: 30%;
+    border-radius: 20%;
     height: 100px;
     width: 100px;
     display: block;
     margin: 2px;
     cursor: pointer;
+    transition-duration: 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
 }
+.connector_bubble:hover{
+    background-color: rgb(247, 247, 247);
+}
+
 .connector_bubble_active{
     border-color: blue;
     box-shadow: 0px 0px 20px 0px blue;
+}
+
+.bubble_text{
+    margin-bottom: 2px;
+}
+
+.bubble_img{
+    max-width: 100%;
+    min-height: 50%;
+    flex-grow: 1;
+}
+
+
+.bubble_details{
+    transition-duration: 0.3s;
+    background-color: lightgray;
+    border: 2px solid blue;
+    padding: 1px 7px 1px 7px;
+    border-radius: 20px;
+    margin-top: 4px;
+    margin-bottom: 3px;
+}
+
+.bubble_details:hover{
+    background-color: rgb(151, 166, 251);
 }
 
 .connector_count_container{
@@ -300,10 +345,12 @@ button:hover{
     font-size: 1.07rem;
     font-weight: bold;
     transition-duration: 0.3s;
+    user-select: none;
+    margin-right: 6px;
 }
 .connector_count_button:hover{
-    background-color: gray;
-    color: white;
+    background-color: rgb(151, 166, 251);
+    /* color: white; */
 }
 
 .count_output{
@@ -311,6 +358,7 @@ button:hover{
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
+    align-items: flex-end;
 }
 
 .count_input{
@@ -318,4 +366,5 @@ button:hover{
     grid-column-end: 3;
     grid-row-start: 10;
     grid-row-end: 11;
+    align-items: flex-start;
 }
