--- a/FrontEndtesting/style.css
+++ b/FrontEndtesting/style.css
@@ -317,7 +317,7 @@ button:hover{
 
 .connector_bubble_active{
     border-color: blue;
-    box-shadow: 0px 0px 20px 0px blue;
+    box-shadow: 0px 0px 15px 0px blue;
 }
 
 .bubble_text{
@@ -329,13 +329,15 @@ button:hover{
     padding: 1px 7px 1px 7px;
     background-color: white;
     font-size: 1.2rem;
+    text-wrap: nowrap;
+    transform: scaleX(0);
 }
 
 .main_bubble_container:hover .bubble_text{
-    transform: translatey(-50cqw);
+    transform: scaleX(1) translatey(-50cqw);
 }
 .main_bubble_container:hover .bubble_details{
-    transform: translatey(50cqw);
+    transform: scaleX(1) translatey(50cqw);
 }
 .bubble_id_text{
     margin: 0;
@@ -358,6 +360,7 @@ button:hover{
     border-radius: 20px;
     cursor: pointer;
     font-size: 1.2rem;
+    transform: scaleX(0);
 }
 
 .bubble_details:hover{
