Creating initial database schema and docker-compose

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,4 +7,9 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Page currently under construction</p>
+    @{string test = "this is a test string";} 
+    <p>Test string: @test</p>
+    @*comment  *@
+    
 </div>
+
