--- a/FrontEndtesting/Main front end/style.css
+++ b/FrontEndtesting/Main front end/style.css
@@ -55,7 +55,7 @@ body{
 .pre-config_header{
     font-size: 1vw;
 }
-button{
+.button{
     border-radius: 50px;
     padding: 10px 18px 10px 18px;
     transition-duration: 0.3s;
@@ -244,6 +244,7 @@ button:hover{
     padding: 7px 0px 7px 0px;
     flex-basis: 90%;
     font-size: 1.15rem;
+    border-radius: 20px;
 }
 
 .connector_cell_more_options button:hover{
@@ -445,4 +446,80 @@ button:hover{
     grid-row-start: 10;
     grid-row-end: 11;
     align-items: flex-start;
+}
+
+.style_scroll{
+    width: 100%;
+    box-sizing: border-box;
+    height: 90%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    background-color: lightcoral;
+    padding: 5px;
+}
+
+.style_container{
+    background-color: white;
+    border: 2px solid red;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.style_container_header{
+    font-size: 1.7rem;
+}
+.length_row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 30px;
+    box-sizing: border-box;
+    padding: 5px;
+    width: 100%;
+    border-top: 1px solid lightgray;
+}
+.padlock_btn{
+    display: flex;
+    border: 2px solid black;
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+}
+.padlock_btn:hover{
+    background-color: rgb(252, 145, 145);
+}
+#Padlock_svg{
+    position: relative;
+    width: 51%;
+    height: 71%;
+    top: 3px;
+    overflow: visible;
+}
+#shackle{
+    transition: all 0.6s ease;
+}
+#keyhole{
+    transition: all 0.6s ease;
+    transform-origin: center 65%;
+}
+#keyhole .active{
+    transform: rotate();
+    rotate: 90deg;
+}
+#lock_body{
+    fill: white;
+}
+#lock_body .active{
+    fill: rgb(252, 31, 31);
 }
