--- a/FrontEndtesting/Main front end/style.css
+++ b/FrontEndtesting/Main front end/style.css
@@ -465,7 +465,7 @@ button:hover{
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    padding: 0.4vh 0.3vw;
+    /* padding: 0.4vh 0.3vw; */
 }
 .style_container_header{
     font-size: 1.7rem;
@@ -484,7 +484,9 @@ button:hover{
     box-sizing: border-box;
     width: 100%;
     position: relative;
-    padding: 2px;
+    overflow: hidden;
+    transition: all 0.4s ease-in-out;
+    flex-basis: 6vw;
 }
 .border_top_bottom{
     border-top: 1px solid lightgray;
@@ -572,7 +574,7 @@ button:hover{
 .length_number{
     flex-grow: 1;
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 1.9vw;
     padding: 0px;
     margin: 0px;
     transition: all 0.4s ease;
@@ -609,10 +611,11 @@ button:hover{
 }
 .number_wrapper{
     display: flex;
-    width: 50%;
+    width: 40%;
     border: 2px solid black;
     border-radius: 20px;
     overflow: hidden;
+    height: 75%;
 }
 
 .increment_wrapper{
@@ -634,6 +637,12 @@ button:hover{
     transition: all 0.4s ease;
     cursor: pointer;
     font-weight: bold;
+}
+.increment:first-child{
+    align-items: flex-start;
+}
+.increment:last-child{
+    align-items: flex-end;
 }
 .increment:hover{
     background-color: red;
