--- a/FrontEndtesting/Main front end/style.css
+++ b/FrontEndtesting/Main front end/style.css
@@ -464,7 +464,7 @@ button:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* padding: 0.4vh 0.3vw; */
 }
 .style_container_header{
