--- a/FrontEndtesting/Main front end/style.css
+++ b/FrontEndtesting/Main front end/style.css
@@ -424,6 +424,7 @@ button:hover{
 }
 .connector_count_button:hover{
     background-color: rgb(151, 166, 251);
+    color: white;
     /* color: white; */
 }
 
@@ -489,7 +490,7 @@ button:hover{
     position: relative;
     overflow: hidden;
     transition: all 0.4s ease-in-out;
-    flex-basis: 6vw;
+    flex-basis: 7.5vw;
 }
 .border_top{
     border-top: 1px solid lightgray;
@@ -612,6 +613,7 @@ button:hover{
     width: 90%;
     gap: 0.4vw;
     position: relative;
+    padding-top: 0.3vw;
 }
 .title_wrapper{
     display: flex;
@@ -723,73 +725,7 @@ button:hover{
     padding: 0px;
 }
 
-.slidebar_wrapper{
-    display: flex;
-    width: 100%;
-    z-index: 5;
-    align-items: center;
-    justify-content: center;
-    flex-basis: 6vh;
-}
-#slidebar{
-    -webkit-appearance: none;  /* Override default CSS styles */
-    appearance: none;
-    width: 100%;
-    height: 2.7vh;
-    background-color: rgb(252, 100, 100);
-    outline: none;
-    margin: 0px;
-    border-radius: 20px;
-    box-sizing: border-box;
-    border: 2px solid red;
-}
-#slidebar::-webkit-slider-thumb{
-    -webkit-appearance: none;  /* Override default CSS styles */
-    appearance: none;
-    width: 3vh;
-    height: 40px;
-    background-color: red;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    border-radius: 10px;
-}
-#slidebar::-webkit-slider-thumb:hover{
-    box-shadow: 0px 0px 3px 1px rgb(43, 43, 43);
-}
-
-.triangle_btn{
-    display: block;
-}
-
-.ratio_wrapper{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 0.4vw;
-    box-sizing: border-box;
-    padding: 0px 0.5vw;
-    flex-basis: 5vh;
-}
-.ratio_btn{
-    background-color: white;
-    border: 2px solid red;
-    border-radius: 20px;
-    margin: 0px;
-    padding: 0.1vh 0px;
-    font-size: 1.2vw;
-    flex-grow: 1;
-    flex-basis: 1vw;
-    text-align: center;
-    transition: all 0.4s ease-in-out;
-}
-
-.ratio_btn:hover{
-    background-color: rgb(252, 100, 100);
-    color: white;
-}
-
-.length_feet{
+.alt_length{
     font-size: 1vw;
     color: black;
 }
@@ -798,5 +734,29 @@ button:hover{
     flex-grow: 1;
     padding-top: 5px;
     padding-left: 3px;
+}
+
+.radio_row{
+    width: 100%;
+    text-align: center;
+    padding-bottom: 3px;
+    transition: all 0.4s ease;
+    overflow: hidden;
+    flex-basis: 6vw;
+}
+
+.radio_header{
+    font-size: 1.5vw;
+}
+
+.radio_segments{
+    font-size: 1vw;
+}
+
+.radio_selector{
+    width: 80%;
+    text-align: center;
+    color: red;
+    font-size: 1.1vw;
 }
 
